--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-/node_modules/
+node_modules/swiper/swiper-bundle.min.css
+node_modules/swiper/swiper-bundle.min.js
+node_modules/imask/esm/index.js
